[package]
name = "sevendrl"
version = "0.1.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.33.0" }
fae = { path = "../fae", features = ["text", "ttf", "png"] }
log = { version = "0.4.8" }
lazy_static = { version = "1.4.0" }

[features]
default = []
static-link = ["sdl2/static-link", "sdl2/bundled"]

# Optimize relatively hot packages in debug as well
[profile.dev.package.fae]
opt-level = 2
[profile.dev.package.fnv]
opt-level = 2
[profile.dev.package.regex]
opt-level = 2
[profile.dev.package.rusttype]
opt-level = 2
[profile.dev.package.sdl2]
opt-level = 2
[profile.dev.package.stb_truetype]
opt-level = 2
